fixing w3c validation issues

--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -75,14 +75,14 @@
 
 <body>
   <a href="./index.html">Back to Home</a>
-  <form action="">
+  <form action="_">
     <label for="user">User</label>
-    <input type="text" name="user" placeholder="User">
+    <input type="text" id="user" name="user" placeholder="User">
 
     <label for="password">Password</label>
-    <input type="password" name="password" placeholder="Password">
+    <input type="password" id="password" name="password" placeholder="Password">
 
-    <input type="submit" value="Submit" class="submit-button"></input>
+    <input type="submit" value="Submit" class="submit-button">
   </form>
 </body>
 
